[package]
name = "valve-rs"
version = "0.1.4"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/JosiahParry/valve"
description = "Auto-scale R {plumber} APIs concurrently using Tokio, Axum, and Deadpool"
homepage = "https://valve.josiahparry.com"
exclude = ["TODO", "WHATIVELEARNED"]
readme = "../../README.md"

[lib]
name = "valve"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]

[[bin]]
name = "valve"
path = "src/main.rs"


[dependencies]
argh = "0.1.10"
axum = { version = "0.6.18", features = ["tokio"]}
hyper = { version = "0.14.26", features = ["client"] }
rand = "0.8.5"
tokio = { version = "1.28.1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
extendr-api = {version = '0.6.0', optional = true }
deadpool = "0.9.5"
async-trait = "0.1.74"

# Tie spawned R worker processes to valve's lifetime so they are terminated even
# when valve is force-killed (and Rust destructors never run).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[features]
default = ["rlib"]
rlib = ["dep:extendr-api"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
